  DefaultValueMap.handleRemove() removed
  DefaultEntity no longer removes column property values when removing the associated foreign key value
  DefaultEntity.removeInvalidForeignKeyValues() added, called in handlePut(), removes foreign key values that don't fit the value being put
  DefaultValueMap no longer calls handlePut() during setAs()
  DefaultKey.hashCodeDirty initialized to true instead of false, which then relied on handlePut()
  DefaultLocalEntityConnection.lockAndCheckIfModified() bug fixed, only selected writable properties, which could then exclude primary key properties
  DefaultEntity.initializeAndCacheReferencedKey() refactored
  DefaultEntity.DefaultKey moved up to package level and renamed DefaultEntityKey
  DefaultEntityKey now overrides validateAndPrepare(), validation moved from handlePut()
  DefaultProperty.validateType() now returns the value
  DefaultEntity and DefaultEntityKey now validate types on deserialization
  DefaultLocalEntityConnection.lockAndCheckIfModified() new bug fixed, now only selects writable along with primary key properties
  DefaultEntityDefinition.getSelectableColumnProperties() now uses old school for loop instead of stream
  Entity.Definition.getProperties(includeHidden) removed
  Domain.define() now protected
  DefaultEntityLocalConnection, blob handling improved, blob property values are now fetched by default
  Chinook demo, added blob image example
  BlobProperty added, with lazyLoading option
  EntityTestUnit now includes blob properties
  Blob unit tests improved
  BlobInputProvider added
  BlobProperty is now hidden by default
  NavigableImagePanel.setMoveImageEnabled() added
  DefaultEntity, now performes property and type validation on constructor parameters
  Entity.getProperty(propertyId) and Entity.Key.getPropertyCount() removed
  DefaultEntityDefinition refactored
  shutdownServer task added to server build file