@@ -12,7 +12,6 @@ import org.jminor.common.value.PropertyValue;
 import org.jminor.framework.domain.property.ColumnProperty;
 import org.jminor.framework.domain.property.DerivedProperty;
 import org.jminor.framework.domain.property.ForeignKeyProperty;
-import org.jminor.framework.domain.property.MirrorProperty;
 import org.jminor.framework.domain.property.Property;
 import org.jminor.framework.domain.property.TransientProperty;
 
@@ -32,7 +31,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 
-import static java.util.Collections.*;
+import static java.util.Collections.emptyList;
 import static java.util.Objects.requireNonNull;
 import static java.util.stream.Collectors.toList;
 
@@ -617,51 +616,12 @@ public class Domain implements Entity.Definition.Provider, Serializable {
     if (entityDefinitions.containsKey(entityId) && !ALLOW_REDEFINE_ENTITY.get()) {
       throw new IllegalArgumentException("Entity has already been defined: " + entityId + ", for table: " + tableName);
     }
-    final Map<String, Property> propertyMap = initializePropertyMap(entityId, propertyBuilders);
-    final List<ColumnProperty> columnProperties = unmodifiableList(getColumnProperties(propertyMap.values()));
-    final List<ForeignKeyProperty> foreignKeyProperties = unmodifiableList(getForeignKeyProperties(propertyMap.values()));
-    final List<TransientProperty> transientProperties = unmodifiableList(getTransientProperties(propertyMap.values()));
 
-    final DefaultEntityDefinition entityDefinition = new DefaultEntityDefinition(domainId, entityId,
-            tableName, propertyMap, columnProperties, foreignKeyProperties, transientProperties, new DefaultEntityValidator());
+    final DefaultEntityDefinition entityDefinition = new DefaultEntityDefinition(this,
+            domainId, entityId, tableName, new DefaultEntityValidator(), propertyBuilders);
     entityDefinitions.put(entityId, entityDefinition);
 
     return entityDefinition.builder();
-  }
-
-  private Map<String, Property> initializePropertyMap(final String entityId, final Property.Builder... propertyBuilders) {
-    final Map<String, Property> propertyMap = new LinkedHashMap<>(propertyBuilders.length);
-    for (final Property.Builder propertyBuilder : propertyBuilders) {
-      validateAndAddProperty(propertyBuilder, entityId, propertyMap);
-      if (propertyBuilder instanceof ForeignKeyProperty.Builder) {
-        initializeForeignKeyProperty(entityId, propertyMap, (ForeignKeyProperty.Builder) propertyBuilder);
-      }
-    }
-    checkIfPrimaryKeyIsSpecified(entityId, propertyMap);
-
-    return unmodifiableMap(propertyMap);
-  }
-
-  private void initializeForeignKeyProperty(final String entityId, final Map<String, Property> propertyMap,
-                                            final ForeignKeyProperty.Builder foreignKeyPropertyBuilder) {
-    final ForeignKeyProperty foreignKeyProperty = foreignKeyPropertyBuilder.get();
-    if (!entityId.equals(foreignKeyProperty.getForeignEntityId()) && Entity.Definition.STRICT_FOREIGN_KEYS.get()) {
-      final Entity.Definition foreignEntity = entityDefinitions.get(foreignKeyProperty.getForeignEntityId());
-      if (foreignEntity == null) {
-        throw new IllegalArgumentException("Entity '" + foreignKeyProperty.getForeignEntityId()
-                + "' referenced by entity '" + entityId + "' via foreign key property '"
-                + foreignKeyProperty.getPropertyId() + "' has not been defined");
-      }
-      if (foreignKeyProperty.getColumnProperties().size() != foreignEntity.getPrimaryKeyProperties().size()) {
-        throw new IllegalArgumentException("Number of column properties in '" + entityId + "." + foreignKeyProperty.getPropertyId() +
-                "' does not match the number of foreign properties in the referenced entity '" + foreignKeyProperty.getForeignEntityId() + "'");
-      }
-    }
-    for (final ColumnProperty.Builder propertyBuilder : foreignKeyPropertyBuilder.getColmnPropertyBuilders()) {
-      if (!(propertyBuilder.get() instanceof MirrorProperty)) {
-        validateAndAddProperty(propertyBuilder, entityId, propertyMap);
-      }
-    }
   }
 
   /**
@@ -726,61 +686,10 @@ public class Domain implements Entity.Definition.Provider, Serializable {
     }
   }
 
-  private static void validateAndAddProperty(final Property.Builder propertyBuilder, final String entityId,
-                                             final Map<String, Property> propertyMap) {
-    final Property property = propertyBuilder.get();
-    checkIfUniquePropertyId(property, entityId, propertyMap);
-    propertyBuilder.setEntityId(entityId);
-    propertyMap.put(property.getPropertyId(), property);
-  }
-
-  private static void checkIfUniquePropertyId(final Property property, final String entityId, final Map<String, Property> propertyMap) {
-    if (propertyMap.containsKey(property.getPropertyId())) {
-      throw new IllegalArgumentException("Property with id " + property.getPropertyId()
-              + (property.getCaption() != null ? " (caption: " + property.getCaption() + ")" : "")
-              + " has already been defined as: " + propertyMap.get(property.getPropertyId()) + " in entity: " + entityId);
-    }
-  }
-
-  private static void checkIfPrimaryKeyIsSpecified(final String entityId, final Map<String, Property> propertyMap) {
-    final Collection<Integer> usedPrimaryKeyIndexes = new ArrayList<>();
-    boolean primaryKeyPropertyFound = false;
-    for (final Property property : propertyMap.values()) {
-      if (property instanceof ColumnProperty && ((ColumnProperty) property).isPrimaryKeyProperty()) {
-        final Integer index = ((ColumnProperty) property).getPrimaryKeyIndex();
-        if (usedPrimaryKeyIndexes.contains(index)) {
-          throw new IllegalArgumentException("Primary key index " + index + " in property " + property + " has already been used");
-        }
-        usedPrimaryKeyIndexes.add(index);
-        primaryKeyPropertyFound = true;
-      }
-    }
-    if (primaryKeyPropertyFound) {
-      return;
-    }
-
-    throw new IllegalArgumentException("Entity is missing a primary key: " + entityId);
-  }
-
   private static Domain registerDomain(final String domainId, final Domain domain) {
     REGISTERED_DOMAINS.put(domainId, domain);
 
     return domain;
-  }
-
-  private static List<ForeignKeyProperty> getForeignKeyProperties(final Collection<Property> properties) {
-    return properties.stream().filter(property -> property instanceof ForeignKeyProperty)
-            .map(property -> (ForeignKeyProperty) property).collect(toList());
-  }
-
-  private static List<ColumnProperty> getColumnProperties(final Collection<Property> properties) {
-    return properties.stream().filter(property -> property instanceof ColumnProperty)
-            .map(property -> (ColumnProperty) property).collect(toList());
-  }
-
-  private static List<TransientProperty> getTransientProperties(final Collection<Property> properties) {
-    return properties.stream().filter(property -> property instanceof TransientProperty)
-            .map(property -> (TransientProperty) property).collect(toList());
   }
 
   private abstract class AbstractQueriedKeyGenerator implements Entity.KeyGenerator {
